# GG

./: CMakeLists.txt  Config.h.in  GiGi.pc.in  GiGiNet.pc.in  GiGiOgre.pc.in  GiGiSDL.pc.in  INSTALLING  Makefile  Makefile.am  Makefile.in  Makefile.mingw  PACKAGING  SConstruct  aclocal.m4  autogen.sh  build_config.py  build_support.py  config.h.in  configure  configure.ac  test.cpp
GG/: AdamGlue.h  (+77 more)
include/: Base.h  Clr.h  Config.h  Config.h.in  GGApp.h  GGBase.h  GGBrowseInfoWnd.h  GGButton.h  GGClr.h  GGConfig.h  GGConfig.h.in  GGControl.h  GGDrawUtil.h  GGDropDownList.h  GGDynamicGraphic.h  GGEdit.h  GGEnum.h  GGEventPump.h  GGException.h  GGFont.h  GGLayout.h  GGListBox.h  GGMenu.h  GGMultiEdit.h  GGPluginInterface.h  GGPtRect.h  GGScroll.h  GGSignal0.h  GGSignal3.h  GGSignal5.h  GGSignal6.h  GGSignal7.h  GGSignal8.h  GGSignalTemplate.h  GGSignalsAndSlots.h  GGSlider.h  GGSpin.h  GGStaticGraphic.h  GGStyleFactory.h  GGText.h  (+18 more)
include/SDL/: SDLGGApp.h
include/dialogs/: GGColorDlg.h  GGFileDlg.h  GGThreeButtonDlg.h  ThreeButtonDlg.h
include/net/: SDLnetsys.h  XMLDoc.h  XMLObjectFactory.h  fastevents.h  net2.h  trace.h
src/: AdamDlg.cpp  AdamGlue.cpp  AdamParser.cpp  AlignmentFlags.cpp  Base.cpp  BrowseInfoWnd.cpp  Button.cpp  CMakeLists.txt  Clr.cpp  Control.cpp  Cursor.cpp  DecodeBase64.h  DefaultCursors.h  DefaultFont.h  DrawUtil.cpp  DropDownList.cpp  DynamicGraphic.cpp  Edit.cpp  EveGlue.cpp  EveLayout.cpp  EveParser.cpp  EventFilter.cpp  EventPump.cpp  ExpressionParser.cpp  ExpressionWriter.cpp  Filesystem.cpp  Flags.cpp  Font.cpp  FunctionParser.cpp  FunctionWriter.cpp  GGApp.cpp  GGBrowseInfoWnd.cpp  GGButton.cpp  GGClr.cpp  GGControl.cpp  GGDrawUtil.cpp  GGDropDownList.cpp  GGDynamicGraphic.cpp  GGEdit.cpp  GGEventPump.cpp  (+51 more)
src/Ogre/: CMakeLists.txt  OgreGUI.cpp  SConscript
src/OgreSDL/: OgreSDLGUI.cpp
src/SDL/: CMakeLists.txt  SConscript  SDLGGApp.cpp  SDLGUI.cpp
src/adobe/: adam.cpp  adam_function.cpp  adam_parser.cpp  any_regular.cpp  basic_sheet.cpp  eve.cpp  eve_evaluate.cpp  expression_parser.cpp  keyboard.cpp  lex_stream.cpp  localization.cpp  string.cpp  token.cpp  virtual_machine.cpp
src/dialogs/: ColorDlg.cpp  FileDlg.cpp  GGColorDlg.cpp  GGFileDlg.cpp  GGThreeButtonDlg.cpp  SConscript  ThreeButtonDlg.cpp
src/net/: SConscript  SDLnet.c  SDLnetTCP.c  SDLnetUDP.c  SDLnetselect.c  fastevents.c  net2.c
test/: Action.cpp  Action.h  CMakeLists.txt  ColorTests.html  EveLayout_vs_Adobe_Begin.html  OgreBackend.h  PresentationTests.html  SDLBackend.h  SignalBindingTests.html  TestAdamFunctions.cpp  TestAdamParser.cpp  TestAdamWriter.cpp  TestDefaultSignalHandler.cpp  TestEveLayout.cpp  TestEveParser.cpp  TestEveWriter.cpp  TestExpressionParser.cpp  TestExpressionWriter.cpp  TestFunctionParser.cpp  TestFunctions.cpp  TestLexer.cpp  TestStrongIntegralTypedef.cpp  TestStrongSizeTypedef.cpp  TestStrongTypedef.cpp  adam_test_expressions_tokens  eve_test_expressions_tokens  function_parser_test.fn  ogre_plugins.cfg  test_expressions
test/asl_1.0.43_adam_files/: checkbox_control.adm  editor.adm  grouped_options.adm  named_function_suite.adm  rotate.adm
test/asl_1.0.43_eve_files/: align_reverse.eve  align_right_test.eve  alignment_test.eve  assistive_example.eve  big_popup.eve  checkbox_control.eve  checkbox_radio_button_suite.eve  edit_text_suite.eve  editor.eve  empty_containers.eve  find_and_replace.eve  grouped_options.eve  image.eve  image_size.eve  image_size_auto.eve  inequality.eve  mini_image_size.eve  mini_image_size_2.eve  mini_image_size_3.eve  nested_group.eve  popup_test.eve  rotate.eve  slider_suite.eve  sort_lines.eve  tabs_and_panels.eve  toggle.eve  widget_palette.eve
test/gg_adam_files/: adam_and_eve_subdialog.adm  button_signal_binding_test.adm  checkbox_signal_binding_test.adm  color_test.adm  dialog_button_test.adm  edit_number_signal_binding_test.adm  edit_text_signal_binding_test.adm  function_test_append_1.adm  function_test_append_2.adm  function_test_append_3.adm  function_test_fold_array.adm  function_test_fold_dictionary.adm  function_test_fold_unary.adm  function_test_foldr_array.adm  function_test_foldr_dictionary.adm  function_test_foldr_unary.adm  function_test_prepend_1.adm  function_test_prepend_2.adm  function_test_prepend_3.adm  function_test_transform_array.adm  function_test_transform_dictionary.adm  function_test_transform_unary.adm  listbox_1_signal_binding_test.adm  listbox_2_signal_binding_test.adm  listbox_3_signal_binding_test.adm  popup_signal_binding_test.adm  presentation_test.adm  radio_button_signal_binding_test.adm  slider_signal_binding_test.adm  tab_group_signal_binding_test.adm
test/gg_eve_files/: adam_and_eve_subdialog.eve  button_color_test.eve  button_presentation_test.eve  button_signal_binding_test.eve  checkbox_color_test.eve  checkbox_presentation_test.eve  checkbox_signal_binding_test.eve  control_button_color_test.eve  control_button_presentation_test.eve  dialog_button_test.eve  dialog_presentation_test.eve  display_number_presentation_test.eve  display_text_presentation_test.eve  edit_number_presentation_test.eve  edit_number_signal_binding_test.eve  edit_text_presentation_test.eve  edit_text_signal_binding_test.eve  eve_only_subdialog_0.eve  eve_only_subdialog_1.eve  eve_only_subdialog_2.eve  eve_only_subdialog_3.eve  function_test_dialog.eve  group_presentation_test.eve  image_presentation_test.eve  label_presentation_test.eve  listbox_1_signal_binding_test.eve  listbox_2_signal_binding_test.eve  listbox_3_signal_binding_test.eve  listbox_presentation_test.eve  popup_presentation_test.eve  popup_signal_binding_test.eve  radio_button_color_test.eve  radio_button_presentation_test.eve  radio_button_signal_binding_test.eve  slider_color_test.eve  (+4 more)
tutorial/: AdamLexer.cpp  AdamLexer.h  AdamParser.cpp  AdamParser.h  CMakeLists.txt  EveParser.cpp  EveParser.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionWriter.cpp  ExpressionWriter.h  Lexer.cpp  Lexer.h  README  SConstruct  adam.cpp  controls.cpp  eve.cpp  minimal.cpp  saveload.cpp  saveload.h  serialization.cpp  serialization.h
(+230 files in other folders)
